# Kursovay4_OOP

./: API_classes.py  Vacancia_class.py  main.py  pyproject.toml  user_function.py  vacancies_function.py
files/: vacancies_HH00.json
